[tool.poetry]
name = "openai-quickstart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.5"
langgraph = "^0.2.39"
langsmith = "^0.1.137"
python-dotenv = "^1.0.1"
tavily-python = "^0.5.0"
langchain-openai = "^0.2.4"
langchain-community = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
